# greentic-telemetry

./: .gitignore  Cargo.toml  Makefile  README.md
.github/otel/: aws.yaml  azure.yaml  gcp.yaml
.github/workflows/: ci-aws-telemetry.yml  ci-azure-telemetry.yml  ci-gcp-telemetry.yml  ci.yml
ci/: local_check.sh
dev/: docker-compose.elastic.yml  filebeat.yml
dev/elastic-compose/: README.md  docker-compose.yml  otel-config.yaml
docs/: ci-iam-notes.md
examples/: demo.rs  metrics.rs  nats_propagation.rs  otlp_demo.rs  stdout.rs  task_local.rs  wasm_host_demo.rs
examples/collector/: docker-compose.yaml  otel-config.yaml
src/: client.rs  context.rs  ctx.rs  dev.rs  export.rs  host_bridge.rs  init.rs  layer.rs  lib.rs  metrics.rs  otlp.rs  propagation.rs  redaction.rs  tasklocal.rs  testutil.rs  wasm_guest.rs  wasm_host.rs
src/presets/: aws.rs  azure.rs  datadog.rs  gcp.rs  loki.rs  mod.rs
tests/: context_propagation.rs  emit_cloud.rs  log_snapshot.rs  otlp_smoke.rs  task_local_injection.rs
tests/snapshots/: log_snapshot__info_log.snap
wit/: greentic-telemetry.wit
