[package]
name = "greentic-telemetry"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-telemetry"
homepage = "https://greentic.ai"
documentation = "https://docs.rs/greentic-telemetry"
description = "Thin telemetry facade for Greentic: tracing/logging/metrics with OTLP + WASM."
readme = "README.md"
keywords = ["telemetry", "tracing", "opentelemetry", "otlp", "wasm"]
categories = ["development-tools","visualization","wasm"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
dev = []            # pretty stdout + rolling file logs
prod-json = []      # JSON stdout for prod
dev-console = ["console-subscriber"]    # optional tokio-console

[dependencies]
anyhow = "1"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-error = "0.2"
tracing-appender = "0.2"
atty = "0.2"
opentelemetry = { version = "0.26", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic", "http-proto", "metrics"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "metrics"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
console-subscriber = { version = "0.4", optional = true }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
