[package]
name = "greentic-telemetry"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-telemetry"
homepage = "https://greentic.ai"
documentation = "https://docs.rs/greentic-telemetry"
description = "Thin telemetry facade for Greentic: tracing/logging/metrics with OTLP + WASM."
readme = "README.md"
keywords = ["telemetry", "tracing", "opentelemetry", "otlp", "wasm"]
categories = ["development-tools","visualization","wasm"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["otlp"]
dev = []            # pretty stdout + rolling file logs
prod-json = []      # JSON stdout for prod
dev-console = ["console-subscriber"]    # optional tokio-console
otlp = []
elastic = []

[dependencies]
anyhow = "1"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-error = "0.2"
tracing-appender = "0.2"
atty = "0.2"
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
console-subscriber = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing-opentelemetry = "0.32"
greentic-types = { version = "0.1" }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
