[package]
name = "greentic-telemetry"
version = "0.2.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-telemetry"
homepage = "https://greentic.ai"
documentation = "https://docs.rs/greentic-telemetry"
description = "Thin telemetry facade for Greentic: tracing/logging/metrics with OTLP + WASM."
readme = "README.md"
keywords = ["telemetry", "tracing", "opentelemetry", "otlp", "wasm"]
categories = ["development-tools","visualization","wasm"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["otlp"]
fmt = ["tracing-subscriber/fmt"]
otlp = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
]

[dependencies]
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "registry", "std"] }
thiserror = "2"
opentelemetry = { version = "0.31", features = ["trace"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
